Added significant functionality Added functionality for login, menu printing/selection and for viewing one's account.